Add the model checking mode in Lincheck tests (#2326)
* Add the model checking mode to Lincheck tests and use a newer and faster version of it

Co-authored-by: Roman Elizarov <elizarov@gmail.com>